# llm

./: .env-dist  .gitignore  Makefile  README.md  archi_bus.md  docker-compose.yml  litellm-config.yaml  ollama_entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
AA-backend-v2/.github/chatmodes/: hexa_expert.chatmode.md
AA-backend-v2/src/components/rag/application/handlers/: query_handler.py
AA-backend-v2/src/components/rag/config/: __init__.py  embedding_model_config.py  llm_model_config.py  parameters.yml  rag_config.py  settings.py  vector_repository_config.py
AA-backend-v2/src/components/rag/domain/config/: __init__.py  model_config.py  rag_config.py
AA-backend-v2/src/components/rag/domain/pipeline/: __init__.py  rag_pipeline.py
AA-backend-v2/src/rag_query/domain/value_objects/: __init__.py  input_document.py  message_role.py  model_config.py  rag_config.py
back/: config.py  main.py
back/application/: __init__.py
back/application/ports/driven/: __init__.py  vector_search_port.py
back/application/ports/driving/usecase/: answer_question.py
back/application/ports/driving/usecase_handler/: answer_question_handler.py
back/application/ports/server_side/: llm_client.py
back/application/ports/user_side/: __init__.py
back/application/ports/user_side/usecase/: answer_question.py
back/application/ports/user_side/usecase_handler/: answer_question_handler.py
back/domain/schema/: answer.py  document_chunk.py
back/domain/service/: rag_service.py
back/infrastructure/: __init__.py
back/infrastructure/adapters/driven_adapters/lite_llm/: lite_llm_client_adapter.py
back/infrastructure/adapters/driven_adapters/llm_ollama/: ollama_llm_client_adapter.py
back/infrastructure/adapters/driven_adapters/qdrant/: qdrant_adapter.py
back/infrastructure/adapters/driving_adapters/rest/: mapper.py  rag_routes.py
back/infrastructure/adapters/server_side/: __init__.py
back/infrastructure/adapters/server_side/llm_ollama/: ollama_llm_client_adapter.py
back/infrastructure/adapters/user_side/: __init__.py
back/infrastructure/adapters/user_side/rest/: dto.py  mapper.py  rag_routes.py
backend/: config.py  main.py  uvicorn_debug.py
backend/src/components/chatbot/infrastructure/: __init__.py
backend/src/components/rag/config/: rag_config.py
backend/src/components/rag/infrastructure/: __init__.py
backend_sample/: config.py
backend_sample/src/components/chatbot/domain/: __init__.py
(+145 files in other folders)
