[project]
name = "Alfred"
version = "0.1.0"
description = "My butler which will help me for personal task or will represent me"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5,<0.116.0", # LiteLLM proxy dependency
    "litellm[proxy]>=1.75.2",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.4",
    "uvicorn>=0.29.0,<0.30.0",  # LiteLLM proxy dependency
]  # Main Core

[dependency-groups]
app = [
    "qdrant-client>=1.15.1",
]
dev = [
    "flake8>=7.3.0",
]
front = [
    "streamlit>=1.47.1",
]

#[tool.uv]
#default-groups = ["app"]