[project]
name = "Alfred"
version = "0.1.0"
description = "My butler which will help me for personal task or will represent me"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "uvicorn>=0.35.0",
]  # Main Core

[dependency-groups]
# Adapters
## Rag component
vector-retriever-qdrant = [
    "qdrant-client>=1.15.1",
]

text-extraction-docling = [
    "docling>=2.48.0",
]

# Other
dev = [
    "flake8>=7.3.0",
]
[tool.uv]
default-groups = ["vector-retriever-qdrant", "text-extraction-docling"]
